# checkpoint9

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml  rviz.launch.py
attach_shelf/rviz/: rb1_rviz.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attach_client.hpp  attach_server.hpp  pre_approach.hpp
my_components/launch/: attach_to_shelf.launch.py  rviz.launch.py
my_components/src/: attach_client.cpp  attach_server.cpp  manual_composition.cpp  pre_approach.cpp
